[metadata]
name = represent-representatives
version = 0.3
license = MIT
description = A web API for elected officials tied to electoral districts, packaged as a Django app.
url = https://github.com/opennorth/represent-reps
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Framework :: Django

[options]
packages = find:
install_requires =
    django-appconf
    represent-boundaries

[isort]
profile = black

[flake8]
exclude = representatives/migrations
extend-ignore =
    # E128 continuation line under-indented for visual indent
    E128,
    # E501 line too long (X > 79 characters)
    E501
